# ForgettingAlgo_SHAP_Research

./: LICENSE  Makefile  README.md  pyproject.toml
docs/docs/: index.md
forgettingalgo_shap_research/: __init__.py  dataset.py  features.py  plots.py
forgettingalgo_shap_research/modeling/: predict.py  train.py
images/: mkdocs.yml
notebooks/: CS206D Forgettability Shap Research_CNN.ipynb  CS206D_Forgettability_Shap_Research_JTT.ipynb  CS206D_Forgettability_Shap_Research_ResNet.ipynb
