[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "forgettingalgo_shap_research"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Xuanjia_Zhanyang_Dylan_Reza" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["forgettingalgo_shap_research"]
force_sort_within_sections = true
